# seedkit-examples

./: .gitignore  README.md  nohup.out  wait_for_server.sh
02-shop/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  REVIEW.md  docker-compose.yml  mise.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  tailwind.config.js
02-shop/assets/css/: tailwind.css
02-shop/billing/: tests.py  views.py
02-shop/config/: health.py  robots.py  urls.py  views.py
02-shop/config/settings/: base.py  local.py  production.py  test.py
02-shop/deploy/: Caddyfile  docker-compose.prod.yml
02-shop/pages/: tests.py  views.py
02-shop/static/css/: tailwind.css
02-shop/templates/: 403.html  404.html  500.html  base.html  index.html
02-shop/templates/errors/: 403.html  404.html  500.html
02-shop/templates/pages/: index.html
02-shop/users/: admin.py  models.py
02-shop/users/migrations/: 0001_initial.py  0002_user_is_subscribed.py
03-jobs-board/: .env  .env.example  .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
03-jobs-board/config/: celery.py  settings.py  urls.py
03-jobs-board/jobs/: admin.py  models.py  tasks.py  tests.py  views.py
03-jobs-board/jobs/migrations/: 0001_initial.py
03-jobs-board/templates/: base.html
03-jobs-board/templates/registration/: logged_out.html  login.html  login_requested.html
04-media-vault/: .dockerignore  .env  .env.example  .gitignore  Dockerfile.dev  README.md  REVIEW.md  docker-compose.yml  pyproject.toml
04-media-vault/.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
04-media-vault/api/: apps.py  controllers.py  schemas.py  tasks.py  urls.py  views.py
04-media-vault/chat/: consumers.py
04-media-vault/config/: asgi.py  consumers.py  middleware.py  routing.py  urls.py  views.py
04-media-vault/config/middleware/: logging.py
04-media-vault/config/settings/: base.py  local.py  production.py  test.py
04-media-vault/jobs/: apps.py  tasks.py
04-media-vault/pages/: consumers.py
05-orbit-demo/: .env.example  .gitignore  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
05-orbit-demo/config/: settings.py  urls.py
06-silk-lab/: .env.example  .gitignore  README.md  REVIEW.md  conftest.py  pyproject.toml  setup.cfg
06-silk-lab/config/: context_processors.py  urls.py  views.py
06-silk-lab/config/settings/: base.py  local.py  test.py
06-silk-lab/jobs/: apps.py  models.py  tasks.py
06-silk-lab/jobs/migrations/: 0001_initial.py
06-silk-lab/jobs/tests/: test_migrations.py
06-silk-lab/pages/: apps.py  tasks.py  tests.py  views.py
06-silk-lab/templates/: _analytics.html  base.html
07-vps-sqlite-saas/: .dockerignore  .env.example  .env.production.example  .gitignore  .mise.toml  .pre-commit-config.yaml  Caddyfile  Dockerfile  Dockerfile.dev  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  litestream.yml  mise.toml  pyproject.toml
07-vps-sqlite-saas/.github/workflows/: test.yml
07-vps-sqlite-saas/config/: middleware.py  routers.py  urls.py  views.py
07-vps-sqlite-saas/config/settings/: base.py  local.py  production.py  test.py
07-vps-sqlite-saas/deploy/: Caddyfile  docker-compose.prod.yml
07-vps-sqlite-saas/jobs/: apps.py  tasks.py
07-vps-sqlite-saas/tests/: test_health.py
07-vps-sqlite-saas/users/: admin.py  tests.py
07-vps-sqlite-saas/users/migrations/: 0001_initial.py
08-fly-app/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  REVIEW.md  conftest.py  docker-compose.override.yml  docker-compose.yml  fly.toml  mise.toml  pyproject.toml
08-fly-app/.github/workflows/: test.yml
08-fly-app/08-fly-app/: .gitignore
08-fly-app/accounts/: context_processors.py  views.py
08-fly-app/api/: api.py  tests.py
08-fly-app/config/: context_processors.py  urls.py  urls_bolt.py  views.py
08-fly-app/config/settings/: base.py  bolt.py  local.py  production.py  test.py
08-fly-app/pages/: context_processors.py  tasks.py  views.py
08-fly-app/templates/: _analytics.html  base.html
08-fly-app/templates/registration/: logged_out.html  login.html  login_requested.html
09-ssh-deploy/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REVIEW.md  conftest.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  mise.toml  pyproject.toml
09-ssh-deploy/.github/workflows/: deploy.yml  test.yml
09-ssh-deploy/config/: context_processors.py  health.py  middleware.py  urls.py
09-ssh-deploy/config/settings/: base.py  local.py  production.py  test.py
09-ssh-deploy/deploy/: .env.prod.example  Caddyfile  docker-compose.prod.yml
09-ssh-deploy/jobs/: apps.py  tasks.py  tests.py  views.py
09-ssh-deploy/pages/: apps.py  tasks.py  tests.py
09-ssh-deploy/templates/: _analytics.html  base.html
09-ssh-deploy/tests/: test_health.py
baselines/02-shop/: .env.example  .gitignore  Caddyfile  Dockerfile  docker-compose.yml  main.py  mise.toml  package-lock.json  package.json  pyproject.toml
baselines/02-shop/config/: urls.py
baselines/02-shop/templates/: 403.html  404.html  500.html  base.html  robots.txt
baselines/02-shop/tests/: test_pages.py
baselines/02-shop/users/: models.py
baselines/04-media-vault/: docker-compose.yml  pyproject.toml  pyrightconfig.json
baselines/04-media-vault/.devcontainer/: devcontainer.json
baselines/04-media-vault/api/: controllers.py  urls.py
baselines/04-media-vault/config/: asgi.py  routing.py  urls.py
baselines/04-media-vault/jobs/: consumers.py  tasks.py
baselines/06-silk-lab/: .gitignore  pyproject.toml
baselines/06-silk-lab/config/: urls.py
baselines/06-silk-lab/jobs/: apps.py  tasks.py  views.py
baselines/06-silk-lab/tests/: conftest.py  (+1 more)
baselines/07-vps-sqlite-saas/: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  conftest.py  docker-compose.prod.yml  entrypoint.sh  litestream.yml  mise.toml  pyproject.toml
baselines/09-ssh-deploy/: .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  mise.toml  pyproject.toml
(+129 files in other folders)
