[project]
name = "02-shop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "django-allauth>=65.16.1",
    "django-axes>=8.3.1",
    "django-environ>=0.13.0",
    "django-tailwind-cli>=4.6.0",
    "psycopg[binary]>=3.3.4",
    "stripe>=15.1.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "django-stubs-ext>=6.0.4",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
extend-exclude = ["migrations", "*/migrations/*"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "DJ",
    "S",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "S101",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**"      = ["S"]
"**/test_*.py"     = ["S"]
"**/tests.py"      = ["S"]
"**/settings/*.py" = ["F405", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["users", "pages", "billing"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["."]
exclude = [
    "**/migrations/**",
    "**/__pycache__",
    ".venv",
    "staticfiles",
    "media",
    "config/settings",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingTypeStubs = "none"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
strictListInference = true
