[project]
name = "shop"
version = "0.1.0"
description = "Small e-commerce site with admin and SMTP transactional email"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.3",
    "django-environ>=0.11",
    "whitenoise[brotli]>=6.8",
    "django-allauth>=65.3",
    "django-axes>=7.0",
    "stripe>=11.0",
    "gunicorn>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "pyright>=1.1",
    "django-stubs[compatible-mypy]>=5.1",
    "ruff>=0.9",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501", "F401"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
