[project]
name = "02-shop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "django-allauth>=65.16.1",
    "django-axes>=8.3.1",
    "django-environ>=0.13.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "stripe>=15.1.0",
    "whitenoise>=6.12.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "django-stubs-ext>=6.0.4",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py"]

[tool.pyright]
include = ["."]
exclude = [".venv", "**/migrations"]
venvPath = "."
venv = ".venv"

[tool.django-stubs]
django_settings_module = "config.settings.local"
