[project]
name = "03-jobs-board"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.3",
    "django>=6.0,<7.0",
    "django-celery-beat>=2.9.0",
    "django-environ>=0.13.0",
    "django-mail-auth>=3.5.5",
    "psycopg[binary]>=3.3.4",
]

[tool.uv]
package = false
