[project]
name = "04-media-vault"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-modern-rest[msgspec,openapi]>=0.9.0",
    "django-redis>=6.0.0",
    "django-rq>=4.1.0",
    "django-storages[s3]>=1.14.6",
    "django-tasks-rq>=0.12.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.12.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "django-stubs-ext>=6.0.4",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
extend-exclude = ["migrations", "*/migrations/*"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "DJ",
    "S",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "S101",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**"      = ["S"]
"**/test_*.py"     = ["S"]
"**/tests.py"      = ["S"]
"**/settings/*.py" = ["F405", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["."]
exclude = [
    "**/migrations/**",
    "**/__pycache__",
    ".venv",
    "staticfiles",
    "media",
    "config/settings",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingTypeStubs = "none"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
strictListInference = true
