[project]
name = "04-media-vault"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.6",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "dj-email-url>=1.0.6",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-modern-rest[msgspec,openapi]>=0.9.0",
    "django-storages[s3]>=1.14.6",
    "django-tasks-rq>=0.12.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.12.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.django-stubs]
django_settings_module = "config.settings.local"
