[project]
name = "orbit-demo"
version = "0.1.0"
description = "Scratch project to exercise django-orbit and verify outbound mail flows."
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-orbit>=0.8.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.django]
settings_module = "config.settings"
