[project]
name = "05-orbit-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "django-environ>=0.13.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "django-orbit[mcp]>=0.8.1",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
