[project]
name = "06-silk-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "django-environ>=0.13.0",
    "django-tasks-db>=0.12.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "django-migration-linter>=6.0.0",
    "django-silk>=5.5.0",
    "django-test-migrations>=1.5.0",
    "django-zeal>=2.1.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
extend-exclude = ["migrations", "*/migrations/*"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "DJ",
    "S",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "S101",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**"      = ["S"]
"**/test_*.py"     = ["S"]
"**/tests.py"      = ["S"]
"**/settings/*.py" = ["F405", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["config", "pages", "jobs"]

[tool.ruff.format]
quote-style = "double"

# django-migration-linter config is in setup.cfg (configparser format)
