[project]
name = "silk-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "psycopg[binary]>=3.2",
    "django-silk>=5.3",
    "django-tasks>=0.8",
    "django-tasks-db>=0.2",
    "django-extensions>=3.2",
    "django-zeal>=0.4",
    "django-migration-linter>=5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "django-test-migrations>=1.4",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F401", "F403", "F405"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"

[tool.django-migration-linter]
database = "default"
