[project]
name = "06-silk-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-silk>=5.5.0",
    "django-tasks>=0.12.0",
    "django-tasks-db>=0.12.0",
    "psycopg2-binary>=2.9.12",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["F403", "F401"]

[dependency-groups]
dev = [
    "django-migration-linter>=6.0.0",
    "django-test-migrations>=1.5.0",
    "django-zeal>=2.1.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]
