[project]
name = "07-vps-sqlite-saas"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dj-email-url>=1.0.6",
    "django>=5.0,<6.0",
    "django-allauth[mfa]>=65.16.1",
    "django-axes>=8.3.1",
    "django-csp>=4.0",
    "django-environ>=0.13.0",
    "django-tasks>=0.12.0",
    "django-tasks-db>=0.12.0",
    "gunicorn>=26.0.0",
    "sentry-sdk[django]>=2.60.0",
    "structlog>=25.5.0",
    "whitenoise>=6.12.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.pyright]
include = ["."]
exclude = [".venv", "**/migrations"]
venvPath = "."
venv = ".venv"

[tool.django-stubs]
django_settings_module = "config.settings.local"

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "django-stubs-ext>=6.0.4",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]
