[project]
name = "07-vps-sqlite-saas"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "django-allauth[mfa]>=65.16.1",
    "django-axes>=8.3.1",
    "django-csp>=4.0",
    "django-environ>=0.13.0",
    "django-structlog>=10.0.0",
    "django-tasks-db>=0.12.0",
    "gunicorn>=26.0.0",
    "sentry-sdk>=2.60.0",
    "structlog>=25.5.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "django-stubs-ext>=6.0.4",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
extend-exclude = ["migrations", "*/migrations/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "DJ", "S", "SIM", "RUF"]
ignore = ["E501", "S101", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]
"**/test_*.py" = ["S"]
"**/tests.py" = ["S"]
"**/settings/*.py" = ["F405", "F403", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["config", "users", "jobs"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
source = ["."]
omit = [
    "**/migrations/**",
    "**/tests/**",
    "**/test_*.py",
    "config/wsgi.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0

[tool.pyright]
include = ["."]
exclude = [
    "**/migrations/**",
    "**/__pycache__",
    ".venv",
    "staticfiles",
    "media",
    "config/settings",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingTypeStubs = "none"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
strictListInference = true
