[project]
name = "08-fly-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0,<7.0",
    "django-anymail[postmark]>=15.0",
    "django-axes>=8.3.1",
    "django-bolt>=0.8.0",
    "django-csp>=4.0",
    "django-environ>=0.13.0",
    "django-mail-auth>=3.5.5",
    "django-redis>=6.0.0",
    "django-storages[s3]>=1.14.6",
    "django-stubs-ext>=6.0.4",
    "gunicorn>=26.0.0",
    "msgspec>=0.21.1",
    "psycopg2-binary>=2.9.12",
    "redis>=7.4.0",
    "sentry-sdk>=2.60.0",
    "whitenoise>=6.12.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "django-stubs-ext>=6.0.4",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py"]

[tool.pyright]
include = ["."]
exclude = [".venv", "**/migrations", "config/settings"]
venvPath = "."
venv = ".venv"

[tool.django-stubs]
django_settings_module = "config.settings.local"
