[project]
name = "09-ssh-deploy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "django-csp>=3.8",
    "django-dbbackup>=4.1",
    "django-environ>=0.11",
    "django-redis>=5.4",
    "django-structlog>=8.0",
    "django-tasks>=0.4",
    "django-tasks-rq>=0.12.0",
    "gunicorn>=22.0",
    "psycopg[binary]>=3.1",
    "sentry-sdk[django]>=2.0",
    "structlog>=24.4",
    "whitenoise>=6.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
