[project]
name = "09-ssh-deploy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<7.0",
    "django-csp>=4.0",
    "django-dbbackup>=5.3.0",
    "django-environ>=0.13.0",
    "django-rq>=4.1.0",
    "django-tasks>=0.12.0",
    "django-tasks-rq>=0.12.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "redis>=7.4.0",
    "sentry-sdk>=2.60.0",
    "structlog>=25.5.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
