[project]
name = "09-ssh-deploy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
    "django-csp>=4.0",
    "django-dbbackup>=5.3.0",
    "django-environ>=0.13.0",
    "django-redis>=6.0.0",
    "django-rq>=4.1.0",
    "django-storages[s3]>=1.14.6",
    "django-structlog>=10.0.0",
    "django-tasks-rq>=0.12.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "sentry-sdk>=2.60.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
extend-exclude = ["migrations", "*/migrations/*"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "DJ",
    "S",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "S101",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]
"**/test_*.py" = ["S"]
"**/tests.py" = ["S"]
"**/settings/*.py" = ["F405", "F403", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["jobs", "config"]

[tool.ruff.format]
quote-style = "double"
