[project]
name = "04-media-vault"
version = "0.1.0"
description = "Media-heavy Django app: S3 uploads, Redis-queued background tasks, WebSocket status updates."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.7",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-health-check>=4.4.0",
    "django-modern-rest[msgspec,openapi]>=0.9.0",
    "django-storages[s3]>=1.14.6",
    "django-tasks>=0.12.0",
    "django-tasks-rq>=0.12.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "pyright>=1.1.409",
    "ruff>=0.15.13",
    "websockets>=16.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "jobs", "api"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
djangoStubsSource = "pyright"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = ["**/migrations/**"]
