[project]
name = "06-silk-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "psycopg[binary]>=3.2",
    "django-environ>=0.11",
    "django-silk>=5.3",
    "django-tasks[db]>=0.7",
    "django-extensions>=3.2",
    "django-zeal>=1.0",
    "django-migration-linter>=5.2",
    "django-test-migrations>=1.4",
    "django-health-check>=3.18",
    "django-tasks-db>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-django>=4.9",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["F401", "F403", "F405"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers"
