[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "vps-sqlite-saas"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6",
    "django-allauth[mfa]>=65.7",
    "django-axes>=7.0",
    "whitenoise>=6.8",
    "gunicorn>=23.0",
    "structlog>=24.4",
    "django-csp>=3.8",
    "sentry-sdk[django]>=2.20",
    "django-tasks>=0.12",
    "django-tasks-db>=0.12",
    "django-health-check>=4.0",
    "dj-database-url>=2.3",
    "environs[django]>=11.2",
    "qrcode>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
    "django-stubs[compatible-mypy]>=5.1",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-p no:warnings"
